sandbox/output
Hiker.java:16: error: cannot find symbol
            String delimiter = arry[0].subString(2);
                                      ^
  symbol:   method subString(int)
  location: class String
1 error
